@@ -48,6 +48,7 @@
 	<plug-in>org.openjump.core.ui.plugin.tools.UnionByAttributePlugIn</plug-in>
 	<plug-in>org.openjump.core.ui.plugin.tools.statistics.StatisticOverViewPlugIn</plug-in>
 	<plug-in>org.openjump.core.ui.plugin.tools.analysis.onelayer.IntersectPolygonsOneLayerPlugIn</plug-in>	
+	<plug-in>org.openjump.core.ui.plugin.tools.analysis.onelayer.MergeSelectedPolygonsWithNeighbourPlugIn</plug-in>
 	<!--- =========  Generate ====================  /-->
 	<plug-in>com.vividsolutions.jump.workbench.ui.plugin.analysis.BufferPlugIn</plug-in>
 	<plug-in>com.vividsolutions.jump.workbench.ui.plugin.analysis.ConvexHullPlugIn</plug-in>
